---------------------------------------------
- Wonder Scale Website                      -
---------------------------------------------

- v1.0.1011                                 -
---------------------------------------------
- 2020-06-10                                -
---------------------------------------------
.: WSW: Task: Change layout in website (WSW-39)

- v1.0.1010                                 -
---------------------------------------------
- 2020-06-07                                -
---------------------------------------------
.: WSW: Task: Add an 404 page to have better SEO (WSW-33)
.: WSW: Task: Update testing script (WSW-25)
.: WSW: Task: Update banner (WSW-24)
.: WSW: Task: Fix CORS issue (WSW-25)

---------------------------------------------
- 2020-06-06                                -
---------------------------------------------
.: WSW: Task: Design a new default user banner (WSW-24)
.: WSW: Task: Add a default profile image to item (WSW-27)
.: WSW: Task: Unpublished Items in category is displayed (WSW-31)
.: WSW: Task: Add Today special if page is a restaurant (WSW-26)
.: WSW: Task: Add default shop profile image (WSW-34)

---------------------------------------------
- 2020-06-05                                -
---------------------------------------------
.: WSW: Task: QR code image slow render issue (WSW-25)
.: WSW: Task: Change Share URL to username (WSW-29)
.: WSW: Task: Prompt login when following without authentication (WSW-28)


- v1.0.1000                                 -
---------------------------------------------
- 2020-05-30                                -
---------------------------------------------
.: WSW: Task: Update shop page layout (WSW-2)
.: WSW: Task: Update favorite page (WSW-7)
.: WSW: Task: Change favicon (WSW-22)
.: WSW: Task: Update shop mobile page layout (WSW-2)
.: WSW: Task: Update list item info (WSW-2)
.: WSW: Task: Save shop in searching page (WSW-7)

---------------------------------------------