@@ -7,6 +7,7 @@
 - 2020-06-10                                -
 ---------------------------------------------
 .: WSW: Task: Change layout in website (WSW-39)
+.: WSW: BugFix: Website icon should be removed when no website url (WSW-45)
 
 - v1.0.1010                                 -
 ---------------------------------------------
